# django-simple-starter

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml
dss/src/dss/: __main__.py  cli.py  generator.py
