[project]
name = "django-simple-starter"
version = "0.2.0"
description = "Django Simple Starter CLI - Scaffold Django projects quickly"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "prafful", email = "kumarprafful54@gmail.com"}
]
keywords = ["django", "cli", "starter", "scaffold"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
dss = "dss.cli:main"

[build-backend]
build-backend = "setuptools.build_meta"
build-system = "setuptools"

[tool.setuptools.packages.find]
where = ["dss/src"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-django>=4.12",
    "black>=25",
    "ruff>=0.9",
    "pre-commit>=4",
]